<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimeVideo"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundPrimeVideo">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/manToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll">

            <TextView
                android:id="@+id/tvMain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fontFamily="@font/poppins_med"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundPrimeVideo"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/textGray"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvHome" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTvShows" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvMovies" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvKids" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/bannerViewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/mainRecycler">
            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                app:tabBackground="@drawable/indicator_selector"
                app:tabIndicatorHeight="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bannerViewPager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:dividerHeight="10dp"
                android:divider="@null"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bannerViewPager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>